edit form + preloader

--- a/CBD/order.html
+++ b/CBD/order.html
@@ -419,6 +419,7 @@
                                     <input type="text" class="promocode__input has-success text-center" placeholder="ВВЕСТИ ПРОМОКОД" value="ZAKAZ15">
                                     <div class="promocode__icon icon icon-promo"></div>
                                 </div>
+                                <p class="error-message text-danger text_size-sm collapse">* заполните обязательные поля</p>
                                 <button class="btn w-100 btn-active btn_size-sm btn_size-md order-aside__btn">Перейти к оплате</button>
                             </div>
                         </div>
@@ -890,6 +891,8 @@
         </div>
     </div>
     <!-- /success -->
+    
+    <div class="preloader"><img src="img/icons/availability-inversion.svg" alt=""  class="preloader__image"></div>
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
