fixed edit + item page

--- a/CBD/item.html
+++ b/CBD/item.html
@@ -278,37 +278,39 @@
                 </div>
             </div>
             <div class="d-lg-flex">
-                <div class="product__brand order-lg-2">
-                    <p class="text_size-md">О бренде</p>
-                    <div class="brand-block product__brand-block">
-                        <div class="brand-block__logo brand-block__logo_sm">
-                            <img src="img/content/brand-1.svg" alt="" class="img-fluid">
-                        </div>
-                        <a href="brand.html" class="btn btn-outline_light btn_size-sm w-100_lg">Подробнее о бренде</a>
-                    </div>
-                    <div class="brand-advantages product__brand-advantages">
-                        <div class="brand-advantages-item d-flex">
-                            <div class="brand-advantages-item__icon"><img src="img/icons/brand-advantages-1.svg" alt=""
-                                    class="img-fluid"></div>
-                            <div class="brand-advantages-item__text">
-                                <p class="text-semibold">Оригинальный товар</p>
-                                <div class="text-light text_size-xs">Вся продукция сертифицированна</div>
+                <div class="product__brand order-lg-2 pos-rel">
+                    <div class="product__brand-floating floating">
+                        <p class="text_size-md">О бренде</p>
+                        <div class="brand-block product__brand-block">
+                            <div class="brand-block__logo brand-block__logo_sm">
+                                <img src="img/content/brand-1.svg" alt="" class="img-fluid">
                             </div>
+                            <a href="brand.html" class="btn btn-outline_light btn_size-sm w-100_lg">Подробнее о бренде</a>
                         </div>
-                        <div class="brand-advantages-item d-flex">
-                            <div class="brand-advantages-item__icon"><img src="img/icons/brand-advantages-2.svg" alt=""
-                                    class="img-fluid"></div>
-                            <div class="brand-advantages-item__text">
-                                <p class="text-semibold">Доставка 1-2 дня</p>
-                                <div class="text-light text_size-xs">Послезавтра, 21 апреля</div>
+                        <div class="brand-advantages product__brand-advantages">
+                            <div class="brand-advantages-item d-flex">
+                                <div class="brand-advantages-item__icon"><img src="img/icons/brand-advantages-1.svg" alt=""
+                                        class="img-fluid"></div>
+                                <div class="brand-advantages-item__text">
+                                    <p class="text-semibold">Оригинальный товар</p>
+                                    <div class="text-light text_size-xs">Вся продукция сертифицированна</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="brand-advantages-item d-flex">
-                            <div class="brand-advantages-item__icon"><img src="img/icons/brand-advantages-3.svg" alt=""
-                                    class="img-fluid"></div>
-                            <div class="brand-advantages-item__text">
-                                <p class="text-semibold">Возврат товара</p>
-                                <div class="text-light text_size-xs">Подробнее о политике возврата товара</div>
+                            <div class="brand-advantages-item d-flex">
+                                <div class="brand-advantages-item__icon"><img src="img/icons/brand-advantages-2.svg" alt=""
+                                        class="img-fluid"></div>
+                                <div class="brand-advantages-item__text">
+                                    <p class="text-semibold">Доставка 1-2 дня</p>
+                                    <div class="text-light text_size-xs">Послезавтра, 21 апреля</div>
+                                </div>
+                            </div>
+                            <div class="brand-advantages-item d-flex">
+                                <div class="brand-advantages-item__icon"><img src="img/icons/brand-advantages-3.svg" alt=""
+                                        class="img-fluid"></div>
+                                <div class="brand-advantages-item__text">
+                                    <p class="text-semibold">Возврат товара</p>
+                                    <div class="text-light text_size-xs">Подробнее о политике возврата товара</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -614,6 +616,7 @@
                 </div>
                 <!-- /product__content -->
             </div>
+            <div class="stoper"></div>
             <div class="title_size-sm text-semibold title_nav title_margin-bottom-md">Масло CBD</div>
             <div class="catalogue-slider recommend-slider">
                 <div>
@@ -1472,6 +1475,7 @@
     <script src="js/slick.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/jquery.ui.touch-punch.min.js"></script>
+    <script src="js/stacktable.js"></script>
     <script src="js/main.js"></script>
 </body>
 
