--- a/CBD/order.html
+++ b/CBD/order.html
@@ -425,6 +425,7 @@
                         </div>
                         <!-- order-aside -->
                     </div>
+                    <div class="stoper"></div>
                 </form>
             </div>
         </div>
